Minor changes in order and cart services
