# BuildABear.Infrastructure/Services/Implementations/TeddyService.cs
@@ -39,18 +39,45 @@ public class TeddyService : ITeddyService
     public async Task<ServiceResponse<Guid>> AddTeddy(TeddyBuildDTO teddy, UserDTO requestingUser, CancellationToken cancellationToken = default) {
         Guid templateId = teddy.TeddyTemplateId;
 
-        var template = _repository.GetAsync<TeddyTemplate>(templateId, cancellationToken);
-        if(template.Result == null)
+        /* First check if the requesting user exists */
+        var user = await _repository.GetAsync<User>(requestingUser.Id, cancellationToken);
+        if (user == null)
+        {
+            return ServiceResponse<Guid>.FromError(new(HttpStatusCode.NotFound, "User doesn't exist!", ErrorCodes.UserNotFound));
+        }
+        /* Then check if the requested template exists */
+        var template = await _repository.GetAsync<TeddyTemplate>(templateId, cancellationToken);
+        if(template == null)
         {
             return ServiceResponse<Guid>.FromError(new(HttpStatusCode.NotFound, "Template not existing!", ErrorCodes.NonexistingTemplate));
         }
+        
+        /* Then check if the requested teddy items exist and are avilable */
+        ICollection<TeddyItem> items = new List<TeddyItem>();
+        if (teddy.ItemsIds != null)
+        {
+            foreach (var itemId in teddy.ItemsIds)
+            {
+                var teddyItem = await _repository.GetAsync<TeddyItem>(itemId, cancellationToken);
+                if(teddyItem == null)
+                {
+                    return ServiceResponse<Guid>.FromError(new(HttpStatusCode.NotFound, "Teddy Item not found!", ErrorCodes.ItemNotFound));
+                }
+                if(teddyItem.Valability == TeddyItemValability.OutOfStock)
+                {
+                    return ServiceResponse<Guid>.FromError(new(HttpStatusCode.NotFound, "Teddy Item not available!", ErrorCodes.ItemUnavailable));
+                }
 
-        ICollection<TeddyItem> items = GetItemsByIds(teddy.ItemsIds, cancellationToken);
+                 items.Add(teddyItem);
+            }
+        }
+
         ICollection<Guid> correctIds = new HashSet<Guid>();
         foreach (var item in items) { 
             correctIds.Add(item.Id);
         }
-        var user = _repository.GetAsync<User>(requestingUser.Id, cancellationToken);
+
+        /* Then check if the requesting user has a cart */
         var cart = await _repository.GetAsync(new CartSpec(requestingUser.Id), cancellationToken);
         if (cart == null) 
         {
@@ -73,12 +100,21 @@ public class TeddyService : ITeddyService
     public async Task<ServiceResponse> DeleteTeddy(Guid id, UserDTO requestingUser, CancellationToken cancellationToken = default) {
         var teddy = await _repository.GetAsync<Teddy>(id);
 
+        /* First check if given teddy exists */
         if (teddy == null)
         {
             return ServiceResponse.FromError(new(HttpStatusCode.NotFound, "Teddy not existing!", ErrorCodes.TeddyNotExisting));
         }
 
-        if (!(requestingUser.Role == Core.Enums.UserRoleEnum.Admin || teddy.Cart.UserId == requestingUser.Id))
+        /* Then check if the requesting user has a cart */
+        var cart = await _repository.GetAsync(new CartSpec(requestingUser.Id), cancellationToken);
+        if (cart == null)
+        {
+            return ServiceResponse<TeddyBuildDTO>.FromError(new(HttpStatusCode.NotFound, "Cart not existing!", ErrorCodes.CartNotFound));
+        }
+
+        /* Then check permissions */
+        if (!(requestingUser.Role == Core.Enums.UserRoleEnum.Admin || teddy.CartId == cart.Id))
         {
             return ServiceResponse.FromError(new(HttpStatusCode.Forbidden, "Only admin users and parent user can delete teddy!", ErrorCodes.CannotDeleteTeddy));
         }
@@ -89,14 +125,29 @@ public class TeddyService : ITeddyService
 
     public async Task<ServiceResponse<TeddyBuildDTO>> GetTeddy(Guid id, UserDTO requestingUser, CancellationToken cancellationToken = default)
     {
-        var teddy = await _repository.GetAsync<Teddy>(id);
+        /* First check if the requesting user exists */
+        var user = await _repository.GetAsync<User>(requestingUser.Id, cancellationToken);
+        if (user == null)
+        {
+            return ServiceResponse<TeddyBuildDTO>.FromError(new(HttpStatusCode.NotFound, "User doesn't exist!", ErrorCodes.UserNotFound));
+        }
 
+        /* Then check if the requested teddy exists */
+        var teddy = await _repository.GetAsync<Teddy>(id);
         if (teddy == null)
         {
             return ServiceResponse<TeddyBuildDTO>.FromError(new(HttpStatusCode.NotFound, "Teddy not existing!", ErrorCodes.TeddyNotExisting));
         }
 
-        if (!(requestingUser.Role == Core.Enums.UserRoleEnum.Admin || teddy.Cart.UserId == requestingUser.Id))
+        /* Then check if the requesting user has a cart */
+        var cart = await _repository.GetAsync(new CartSpec(requestingUser.Id), cancellationToken);
+        if (cart == null)
+        {
+            return ServiceResponse<TeddyBuildDTO>.FromError(new(HttpStatusCode.NotFound, "Cart not existing!", ErrorCodes.CartNotFound));
+        }
+
+        /* Then check permissions */
+        if (!(requestingUser.Role == Core.Enums.UserRoleEnum.Admin || teddy.CartId == cart.Id))
         {
             return ServiceResponse<TeddyBuildDTO>.FromError(new(HttpStatusCode.Forbidden, "Only admin users and parent user can view teddy!", ErrorCodes.CannotViewTeddy));
         }
@@ -108,17 +159,33 @@ public class TeddyService : ITeddyService
 
     public async Task<ServiceResponse<Guid>> UpdateTeddy(Guid id, TeddyUpdateDTO teddyTemp, UserDTO requestingUser, CancellationToken cancellationToken = default)
     {
+        /* First check if the requesting user exists */
+        var user = await _repository.GetAsync<User>(requestingUser.Id, cancellationToken);
+        if (user == null)
+        {
+            return ServiceResponse<Guid>.FromError(new(HttpStatusCode.NotFound, "User doesn't exist!", ErrorCodes.UserNotFound));
+        }
+
+        /* Then check if teddy exists */
         var teddy = await _repository.GetAsync<Teddy>(id);
-        
         if(teddy == null)
         {
             return ServiceResponse<Guid>.FromError(new(HttpStatusCode.NotFound, "Teddy not existing!", ErrorCodes.TeddyNotExisting));
         }
 
-        if (!(requestingUser.Role == Core.Enums.UserRoleEnum.Admin || teddy.Cart.UserId == requestingUser.Id)) {
+        /* Then check if the requesting user has a cart */
+        var cart = await _repository.GetAsync(new CartSpec(requestingUser.Id), cancellationToken);
+        if (cart == null)
+        {
+            return ServiceResponse<Guid>.FromError(new(HttpStatusCode.NotFound, "Cart not existing!", ErrorCodes.CartNotFound));
+        }
+
+        /* Then check permissions */
+        if (!(requestingUser.Role == Core.Enums.UserRoleEnum.Admin || teddy.CartId == cart.Id)) {
             return ServiceResponse<Guid>.FromError(new(HttpStatusCode.Forbidden, "Only admin users and parent user can update teddy!", ErrorCodes.CannotUpdateTeddy));
         }
 
+        /* Then check if given teddy template exists */
         if (teddyTemp.TeddyTemplateId != null) {
             var template = _repository.GetAsync<TeddyTemplate>((Guid) teddyTemp.TeddyTemplateId);
             if (template.Result == null)
@@ -127,10 +194,29 @@ public class TeddyService : ITeddyService
             }
         }
 
+        /* Then check if the requested teddy items exist and are avilable */
+        ICollection<TeddyItem> items = new List<TeddyItem>();
+        if (teddyTemp.ItemsIds != null)
+        {
+            foreach (var itemId in teddyTemp.ItemsIds)
+            {
+                var teddyItem = await _repository.GetAsync<TeddyItem>(itemId, cancellationToken);
+                if (teddyItem == null)
+                {
+                    return ServiceResponse<Guid>.FromError(new(HttpStatusCode.NotFound, "Teddy Item not found!", ErrorCodes.ItemNotFound));
+                }
+                if (teddyItem.Valability == TeddyItemValability.OutOfStock)
+                {
+                    return ServiceResponse<Guid>.FromError(new(HttpStatusCode.NotFound, "Teddy Item not available!", ErrorCodes.ItemUnavailable));
+                }
+
+                items.Add(teddyItem);
+            }
+        }
+
         teddy.Name = teddyTemp.Name ?? teddy.Name;
         teddy.Filling = teddyTemp.Filling ?? teddy.Filling;
         teddy.TeddyTemplateId = teddyTemp.TeddyTemplateId ?? teddy.TeddyTemplateId;
-        ICollection<TeddyItem> items = GetItemsByIds(teddyTemp.ItemsIds, cancellationToken);
         teddy.Items = items;
         await _repository.UpdateAsync(teddy, cancellationToken);
 
